kind/asset/opa/template/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: opa-proxy
  namespace: opa
spec: 
  virtualhost:
    fqdn: #@ data.values.opa.fqdn
    tls:
      secretName: opa-cert-tls
  routes: 
    - conditions:
      - prefix: /
      services:
        - name: opa
          port: 8443
